# PolyPwnCTF-2026-Challenges

./: README.md
crypto/Correspondance avant l'apocalypse/: Letter.txt  README.md  challenge.yml
crypto/Cryptochimie/: README.md  challenge.yml
crypto/Dexter 1/: README.md  challenge.yml
crypto/Dexter 2/: README.md  challenge.yml
crypto/Dexter 3/: README.md  challenge.yml
crypto/NSSHA 1/: Dockerfile  README.md  challenge.yml
crypto/NSSHA 2/: Dockerfile  README.md  challenge.yml
crypto/The Cure/: README.md  challenge.yml  solution.md
crypto/Voss Cipher/: README.md  challenge.yml
forensics/Arc7 Lab/: .dockerignore  Dockerfile  challenge.yml  solution.md
forensics/Ghost in the Heap/: README.md  challenge.yml
forensics/Lab Attack 1/: README.md  challenge.yml
forensics/Lab Attack 2/: README.md  challenge.yml
forensics/Lab Attack 3/: README.md  challenge.yml
forensics/Lab Attack 4/: README.md  challenge.yml
forensics/Lab Attack 5/: README.md  challenge.yml  monitor.ps1
forensics/Nexus Labs 1/: Dockerfile  SOLUTIONS.md  build.py  challenge.yml  docker-compose.yaml
forensics/Nexus Labs 2/: challenge.yml
forensics/Nexus Labs 3/: challenge.yml
forensics/Nexus Labs 4/: challenge.yml
forensics/Test Subject 1/: challenge.yml  test_subject_1.doc
forensics/Test Subject 2/: challenge.yml
forensics/Test Subject 3/: challenge.yml
forensics/Test Subject 4/: README.md  challenge.yml
misc/Project Mosaic/: README.md  challenge.pcap  challenge.yml
misc/Rabb-IT H.O.L/: Dockerfile  README.md  challenge.yml  docker-compose.yml  init.sql  start.sh
network/Wireless Whispers/: README.md  challenge.yml  wifi_capture.pcap
osint/La Fondatrice 1/: README.md  challenge.yml  intro.docx
osint/La Fondatrice 2/: README.md  challenge.yml
osint/La Fondatrice 3/: README.md  challenge.yml
osint/La Fondatrice 4/: README.md  challenge.yml
osint/The Index/: README.md  challenge.yml
osint/The Last Stronghold/: README.md  challenge.yml  solution.md
pwn/CatLab 2/: README.md  challenge.yml
pwn/fic/: Dockerfile  challenge.yml  compose.yaml
pwn/up/: Dockerfile  challenge.yml  compose.yaml
reverse/Code Machine 1/: README.md  challenge.yml  code.s
reverse/Code Machine 2/: README.md  challenge.yml  code.s
reverse/LabOps 1/: Dockerfile  README.md  build.zig  build.zig.zon  challenge.yml
reverse/LabOps 2/: challenge.yml
reverse/LabOps 3/: challenge.yml
reverse/Solution Mixer/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  challenge.yml
reverse/Solution Mixer/src/: CMakeLists.txt  build.sh  client.cpp  docker-entrypoint.sh  server.cpp
steg/Back to the Past/: Dockerfile  README.md  build_timeline.sh  challenge.yml  flag-committer.py  main.py  solution.md
steg/Dernier Signal 1/: README.md  challenge.yml
steg/Dernier Signal 2/: README.md  challenge.yml
steg/Dernier Signal 3/: README.md  challenge.yml
steg/Labo Rinthe/: Dockerfile  README.md  challenge.yml
steg/Secret Invisible Gallery/: README.md  challenge.yml
steg/The Picture/: README.md  challenge.yml
web/CatLab 1/: Dockerfile  README.md  challenge.yml  docker-compose.yml  entrypoint.sh
web/Concealed Warehouse/: Dockerfile  README.md  challenge.yml
web/DNA Visualizer 1/: Dockerfile  README.md  challenge.yml  nginx.conf  supervisord.conf
web/DNA Visualizer 2/: README.md  challenge.yml
web/Null Return/: Dockerfile  README.md  app.py  challenge.yml
(+199 files in other folders)
